refactor user service methods and add integration tests for authentication